<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/r"
        android:title="@string/title_weather"
        android:checkable="true"
        />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/title_favorite"
        />

    <item
        android:id="@+id/AlertFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings"
        android:title="@string/title_setting" />

</menu>