<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_current"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/current_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_daily"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dayTxt"
                tools:listitem="@layout/daily_row" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_hourly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.cardview.widget.CardView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:alpha="1"

                android:visibility="visible"
                app:cardBackgroundColor="#48FFFFFF"
                app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
                app:layout_constraintRight_toRightOf="@id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_hourly">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtView_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Humidity"
                        android:textColor="#0B1A6A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/data_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="data_humidity"
                        android:textColor="#0B1A6A"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/txtView_humidity"
                        app:layout_constraintTop_toBottomOf="@+id/txtView_humidity" />

                    <TextView
                        android:id="@+id/txt_precipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Precipitation"
                        android:textColor="#0B1A6A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/data_humidity"
                        app:layout_constraintTop_toBottomOf="@+id/data_humidity" />

                    <TextView
                        android:id="@+id/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:text="data_precipitation"
                        android:textColor="#0B1A6A"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/txt_precipitation"
                        app:layout_constraintTop_toBottomOf="@+id/txt_precipitation" />

                    <TextView
                        android:id="@+id/txt_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="80dp"
                        android:text="@string/Pressure"
                        android:textColor="#0B1A6A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/data_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="data_pressure"
                        android:textColor="#0B1A6A"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/txt_pressure"
                        app:layout_constraintTop_toBottomOf="@+id/txt_pressure" />

                    <TextView
                        android:id="@+id/data_pressure2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:text="@string/HPA"
                        android:textColor="#0B1A6A"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/data_pressure"
                        app:layout_constraintStart_toEndOf="@+id/data_pressure"
                        app:layout_constraintTop_toTopOf="@+id/data_pressure" />

                    <TextView
                        android:id="@+id/txt_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/Visibility"
                        android:textColor="#0B1A6A"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/data_pressure"
                        app:layout_constraintTop_toBottomOf="@+id/data_pressure" />

                    <TextView
                        android:id="@+id/data_visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:text="data_visibility"
                        android:textColor="#0B1A6A"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/txt_visibility"
                        app:layout_constraintTop_toBottomOf="@+id/txt_visibility" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="35dp"
                        android:background="#0B1A6A"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/data_humidity" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/dayTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:paddingStart="10dp"
                android:text="@string/Daily"
                android:textColor="#0B1A6A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_current" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:text="@string/Hourly"
                android:textColor="#0B1A6A"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_daily" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/cardview_shadow_end_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>